--- a/Pavan/admin.html
+++ b/Pavan/admin.html
@@ -35,8 +35,8 @@
             src="https://static.vecteezy.com/system/resources/previews/002/002/403/original/man-with-beard-avatar-character-isolated-icon-free-vector.jpg"
             alt=""
           />
-          <p>Admin Name</p>
-          <p>Admin Gmail</p>
+          <p class="admin-name">Admin Name</p>
+          <p class="admin-email">Admin Gmail</p>
         </div>
         <div>
           <h4 id="admission">Admission</h4>
@@ -50,9 +50,6 @@
         <div>
           <h4 id="Teacher">Teacher</h4>
         </div>
-        <!-- <div>
-          <h4 id="viewTeacher">View Teacher</h4>
-        </div> -->
         <div>
           <h4 id="addCourse">Add Course</h4>
         </div>
@@ -72,7 +69,7 @@
 
         <!-- -------head----- -->
         <div id="content">
-          <div id="allAdmission">
+
             <div class="card-list">
               <div class="card">
                 <div class="card-img">
@@ -83,162 +80,17 @@
                 </div>
 
                 <div class="card-body">
-                  <h4>Student 1 Name</h4>
-                  <p>Course</p>
-                  <p>Class Teacher</p>
-                  <p>Parent Name</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-img">
-                  <img
-                    src="https://static.vecteezy.com/system/resources/previews/002/002/403/original/man-with-beard-avatar-character-isolated-icon-free-vector.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="card-body">
-                  <h4>Student 1 Name</h4>
-                  <p>Course</p>
-                  <p>Class Teacher</p>
-                  <p>Parent Name</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-img">
-                  <img
-                    src="https://static.vecteezy.com/system/resources/previews/002/002/403/original/man-with-beard-avatar-character-isolated-icon-free-vector.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="card-body">
-                  <h4>Student 1 Name</h4>
-                  <p>Course</p>
-                  <p>Class Teacher</p>
-                  <p>Parent Name</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-img">
-                  <img
-                    src="https://static.vecteezy.com/system/resources/previews/002/002/403/original/man-with-beard-avatar-character-isolated-icon-free-vector.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="card-body">
-                  <h4>Student 1 Name</h4>
-                  <p>Course</p>
-                  <p>Class Teacher</p>
-                  <p>Parent Name</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-img">
-                  <img
-                    src="https://static.vecteezy.com/system/resources/previews/002/002/403/original/man-with-beard-avatar-character-isolated-icon-free-vector.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="card-body">
-                  <h4>Student 1 Name</h4>
-                  <p>Course</p>
-                  <p>Class Teacher</p>
-                  <p>Parent Name</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-img">
-                  <img
-                    src="https://static.vecteezy.com/system/resources/previews/002/002/403/original/man-with-beard-avatar-character-isolated-icon-free-vector.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="card-body">
-                  <h4>Student 1 Name</h4>
-                  <p>Course</p>
-                  <p>Class Teacher</p>
-                  <p>Parent Name</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-img">
-                  <img
-                    src="https://static.vecteezy.com/system/resources/previews/002/002/403/original/man-with-beard-avatar-character-isolated-icon-free-vector.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="card-body">
-                  <h4>Student 1 Name</h4>
-                  <p>Course</p>
-                  <p>Class Teacher</p>
-                  <p>Parent Name</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-img">
-                  <img
-                    src="https://static.vecteezy.com/system/resources/previews/002/002/403/original/man-with-beard-avatar-character-isolated-icon-free-vector.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="card-body">
-                  <h4>Student 1 Name</h4>
-                  <p>Course</p>
-                  <p>Class Teacher</p>
-                  <p>Parent Name</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-img">
-                  <img
-                    src="https://static.vecteezy.com/system/resources/previews/002/002/403/original/man-with-beard-avatar-character-isolated-icon-free-vector.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="card-body">
-                  <h4>Student 1 Name</h4>
-                  <p>Course</p>
-                  <p>Class Teacher</p>
-                  <p>Parent Name</p>
+                  <h4 class="admin1-name">Admin Name</h4>
+                  <p class="admin1-email">Admin Email</p>
+                  <p class="admin1-pass">Admin Password</p>
                 </div>
               </div>
             </div>
-          </div>
-
           <!-- ------adimission------ -->
 
           <!-- -------add student----- -->
 
-          <div class="add-student">
-            <form action="" id="add-stud">
-              <label for="">Student Name</label>
-              <input type="text" placeholder="Name" />
-              <label for="">Image</label>
-              <input type="text" placeholder="image url" />
-              <label for="">E-mail</label>
-              <input type="text" placeholder="email" />
-              <label for="">Course</label>
-              <input type="text" placeholder="course" />
-              <label for="">Parent/Gurdian Name</label>
-              <input type="text" placeholder="Parent Name" />
-            </form>
-          </div>
-        </div>
+        
       </div>
     </div>
   </body>
