--- a/Pavan/userInfo.html
+++ b/Pavan/userInfo.html
@@ -62,6 +62,8 @@
         <h4>Register E-mail :</h4>
       </div>
     </div>
+
+    <a id="admin" href="admin.html">Admin DashBoard</a>
   </body>
 </html>
 <script>
