--- a/Pavan/userhome.html
+++ b/Pavan/userhome.html
@@ -37,7 +37,7 @@
         <a href="../Ashish/testimonial.html">Testimonial</a>
       </div>
       <a href="../index.html" id="logout">Log out</a>
-      <a href="user.html"><button id="register"></button></a>
+      <a href="userInfo.html"><button id="register"></button></a>
     </div>
 
     <!-- nav bar  -->
@@ -305,51 +305,50 @@
 </html>
 
 <script>
-
   let register = document.querySelector("#register");
   let logout = document.getElementById("logout");
   var id;
   fetch(`http://localhost:3000/afterLogin`)
-    .then(res=>{
-    return res.json();
-    }).then(data=>{
+    .then((res) => {
+      return res.json();
+    })
+    .then((data) => {
       displayName(data[0]);
       // console.log(data);
-    }).catch(err=>{
-    console.log(err);
-  })
-  function displayName(data)
-  {
-    if(data != null)
-    {
+    })
+    .catch((err) => {
+      console.log(err);
+    });
+  function displayName(data) {
+    if (data != null) {
       let name = data.name;
       name = name.split(" ");
       id = data.id;
-      console.log(id)
-      console.log(name[0])
+      console.log(id);
+      console.log(name[0]);
       register.innerText = name[0];
-      logout.style.display="block";
-    }else{
-      register.innerText="Register";
-      logout.style.display="none";
+      logout.style.display = "block";
+    } else {
+      register.innerText = "Register";
+      logout.style.display = "none";
     }
   }
 
-  logout.addEventListener("click",function(e){
+  logout.addEventListener("click", function (e) {
     e.preventDefault();
-    fetch(`http://localhost:3000/afterLogin/${id}`,{
-      method:"DELETE"
+    fetch(`http://localhost:3000/afterLogin/${id}`, {
+      method: "DELETE",
     })
-    .then(res=>{
-    return res.json();
-    }).then(data=>{
-      // console.log(data);
-      displayName(null)
-    }).catch(err=>{
-    console.log(err);
-    })
-    console.log(id)
-  })
-
-
+      .then((res) => {
+        return res.json();
+      })
+      .then((data) => {
+        // console.log(data);
+        displayName(null);
+      })
+      .catch((err) => {
+        console.log(err);
+      });
+    console.log(id);
+  });
 </script>
