--- a/Ashish/programe.html
+++ b/Ashish/programe.html
@@ -19,8 +19,8 @@
           <a href="../Jahir/register.html">Admissions</a>
           <a href="./testimonial.html">Testimonial</a>
         </div>
-  
-        <a href="Jahir/login.html"><button id="register">Registration</button></a>
+        <button id="logout" >Log out</button>
+        <a href="../Jahir/login.html"><button id="register">Registration</button></a>
       </div>
       
     <section class="course-section">
