--- a/Amol/course-details.html
+++ b/Amol/course-details.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet" />
-    <title>Document</title>
+    <title>Edukin</title>
 </head>
 
 <body>
