--- a/Amol/courses.html
+++ b/Amol/courses.html
@@ -16,7 +16,7 @@
   href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap"
   rel="stylesheet"
 />
-  <title>Document</title>
+  <title>Edukin</title>
 </head>
 
 <body>
