--- a/Amol/payment.html
+++ b/Amol/payment.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet" />
 
-  <title>Document</title>
+  <title>Edukin</title>
 </head>
 
 <body>
