--- a/Pavan/userInfo.html
+++ b/Pavan/userInfo.html
@@ -120,7 +120,7 @@
 let logout = document.getElementById("logout");
 
 
-fetch("http://localhost:3000/afterLogin/")
+fetch("https://mock-api-og1t.onrender.com/afterLogin/")
     .then(res => {
         return res.json();
     }).then(data => {
