--- a/Pavan/userhome.html
+++ b/Pavan/userhome.html
@@ -308,7 +308,7 @@
   let register = document.querySelector("#register");
   let logout = document.getElementById("logout");
   var id;
-  fetch(`http://localhost:3000/afterLogin`)
+  fetch(`https://mock-api-og1t.onrender.com/afterLogin`)
     .then((res) => {
       return res.json();
     })
@@ -336,7 +336,7 @@
 
   logout.addEventListener("click", function (e) {
     e.preventDefault();
-    fetch(`http://localhost:3000/afterLogin/${id}`, {
+    fetch(`https://mock-api-og1t.onrender.com/afterLogin/${id}`, {
       method: "DELETE",
     })
       .then((res) => {
