--- a/Pavan/userhome.html
+++ b/Pavan/userhome.html
@@ -343,7 +343,7 @@
         return res.json();
       })
       .then((data) => {
-        // console.log(data);
+        console.log(data);
         displayName(null);
       })
       .catch((err) => {
